--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
-    "express": "^4.19.2",
+    "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mysql": "^2.18.1",
     "pug": "^2.0.3"
   }
 }
