--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.0",
     "pug": "^2.0.3"
   }
 }
